--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>3 March 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> https://gvtm9943.github.io/Portfolios/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9384346898</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pudukkottai,Tamil Nadu,India</span></li>
                 </ul>
