--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="social-links text-center">
       <a href="http://x.com/gvtm_001" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="https://www.facebook.com/goutham.gvtm?mibextid=ZbWKwL" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="instagram.com/_friend_of_everyone/" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="linkedin.com/Gvtm_9943/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.instagram.com/_friend_of_everyone/" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/goutham-s-57490826a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
